fix progressrange of indicator
